# FastNoiseSIMD

./: .gitignore  .travis.yml  CMakeLists.txt  FastNoiseSIMD.cpp  FastNoiseSIMD.h  FastNoiseSIMD_avx2.cpp  FastNoiseSIMD_internal.cpp  FastNoiseSIMD_internal.h  FastNoiseSIMD_sse2.cpp  FastNoiseSIMD_sse41.cpp  README.md  appveyor.yml  install-catch2.sh  jenkins.py
FastNoiseSIMD/: FastNoiseSIMD.cmake.h  FastNoiseSIMD.cpp  FastNoiseSIMD.h  FastNoiseSIMD_ARMv7.cpp  FastNoiseSIMD_NEON.cpp  FastNoiseSIMD_avx2.cpp  FastNoiseSIMD_avx512.cpp  FastNoiseSIMD_export.h  FastNoiseSIMD_internal.cpp  FastNoiseSIMD_internal.h  FastNoiseSIMD_internal.inl  FastNoiseSIMD_neon.cpp  FastNoiseSIMD_none.cpp  FastNoiseSIMD_sse2.cpp  FastNoiseSIMD_sse41.cpp  internal_avx2.inl  internal_avx512.inl  internal_neon.inl  internal_none.inl  internal_sse2.inl  internal_sse41.inl  simd_constants.inl  simd_init.inl
FastNoiseSIMD/ARM/: cpu-features.c
cmake/: FastNoiseSIMD.pc.in  FastNoiseSIMDConfig.cmake.in  FastNoiseSIMD_config.h.in
include/FastNoiseSIMD/: FastNoiseSIMD.h  FastNoiseSIMD_config.h
src/: FastNoiseSIMD.cpp  FastNoiseSIMD_avx2.cpp  FastNoiseSIMD_avx512.cpp  FastNoiseSIMD_internal.cpp  FastNoiseSIMD_internal.h  FastNoiseSIMD_neon.cpp  FastNoiseSIMD_sse2.cpp  FastNoiseSIMD_sse41.cpp
test/: main.cpp  simplex_noise.cpp  tests.cmake
testApp/: main.cpp
